hphp/test/slow/variadic_args/lambdas_inout_variadic_3.php.expectf
Fatal error: A variadic parameter ('...') cannot have a modifier that changes the calling convention, like 'inout'. in %s/test/slow/variadic_args/lambdas_inout_variadic_3.php on line 6